# T3Vtech

./: .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  main.c  makefile
assets/: mexican_tile.txt  sky.txt  wood.txt
doc/: API.md  coding-guidelines.md  features
doc/doxygen-doc/html/: annotated.html  assets_8hpp__incl.map  assets_8hpp_source.html  barycentric__interpolation_8cpp.html  barycentric__interpolation_8cpp__incl.map  barycentric__interpolation_8cpp__incl.md5  classes.html  classt3v_1_1engine-members.html  classt3v_1_1engine.html  classt3v_1_1object3d-members.html  classt3v_1_1renderer-members.html  classt3v_1_1renderer.html  classt3v_1_1renderer__inherit__graph.map  classt3v_1_1software__rasterizer-members.html  classt3v_1_1software__rasterizer.html  classt3v_1_1software__rasterizer__coll__graph.map  dir_2052808828190f934b76e979ee65af8a.html  dir_60be9374338b8c401295b09e709d494a.html  dir_c743704d4a27141d26350e4960f85eaa.html  doxygen.css  general_8cpp__incl.map  general_8cpp__incl.md5  general_8cpp_source.html  general_8hpp__dep__incl.map  globals_defs.html  index.html  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.md5  math_8hpp__incl.md5  math_8hpp_source.html  menudata.js  namespacemembers_func.html  namespaces.html  namespacet3v.html  object3d_8cpp__incl.map  object3d_8cpp__incl.md5  object3d_8cpp_source.html  object3d_8hpp__incl.map  rasterize__triangle_8cpp__incl.map  (+28 more)
src/: definitions.hpp  main.c  main.cpp  sample_application.cpp  te.hpp
src/engine/: general.cpp  general.hpp  multithreading.cpp  multithreading.hpp  te.h
src/engine/assets/: assets.hpp  fonts.cpp  sprite.cpp  textures.cpp
src/engine/general/: multithreading.c  multithreading.h
src/engine/input/: input.cpp
src/engine/math/: barycentric_interpolation.cpp  math.hpp  perspective_divide.cpp
src/engine/misc/: misc.c  misc.h
src/engine/renderer/: object3d.cpp  object3d.hpp  renderer.c  renderer.hpp  renderer_data_types.hpp  renderer_init.cpp  vertex.hpp
v1/: CMakeLists.txt  README.md  makefile
v1/assets/: License free - wooden_crate.txt  road.txt  wood.txt
v1/doc/: coding-guidelines.md
v1/src/: main.cpp  te.hpp
v1/src/engine/: general.cpp  multithreading.hpp
v1/src/engine/input/: input.cpp
v1/windows/: CMakeCache.txt
v1/windows/windows/: Makefile
v2/: CMakeLists.txt
v2/src/: main.c
v2/src/engine/: te.h
v2/src/engine/general/: definitions.h  general.c  general.h  init.c  multithreading.h
v2/src/engine/math/: barycentric_interpolation.c  math.h  tween.h
v2/src/engine/misc/: misc.c  misc.h  multithreading.c
v2/src/engine/renderer/: renderer.c  renderer.h
v2/src/engine/renderer/software_rasterizer/: draw_pixel.c  init.c  line.c  line.h  quit.c  rasterize_triangle.c  render_call.c  render_thread.c  setpixel.h  software_rasterizer.h  triangle.c  triangle.h  triq2.c  triq2.h  update.c
v2/src/engine/renderer/software_rasterizer/2d/: line.h
windows/windows/: cmake_install.cmake
(+176 files in other folders)
